Database code Update
Related to #2 FS database:
- update SQLdatabase.ipynb: created database 'fsqa' and tables
- update .gitignore: add my private settings, instead public a custom
  settings for a general user

--- a/Notebooks/01_SQLDatabase.ipynb
+++ b/Notebooks/01_SQLDatabase.ipynb
@@ -13,97 +13,28 @@
     "```\n",
     "KOSPI\n",
     "├── Company\n",
-    "│   ├── Name\n",
     "│   ├── Code\n",
-    "│   ├── Year\n",
-    "│   └── Rpid\n",
-    "└── FS\n",
+    "│   └── Name\n",
+    "├── FS\n",
+    "│   ├── Code\n",
+    "│   ├── Rpid\n",
+    "│   └── Time\n",
+    "├── BS\n",
+    "│   ├── Code\n",
+    "│   ├── Rpid \n",
+    "│   ├── Account\n",
+    "│   └── Value\n",
+    "├── IS\n",
+    "│   ├── Code\n",
+    "│   ├── Rpid \n",
+    "│   ├── Account\n",
+    "│   └── Value\n",
+    "└── CF \n",
     "    ├── Code\n",
-    "    ├── Rpid\n",
-    "    ├── Type\n",
+    "    ├── Rpid \n",
     "    ├── Account\n",
-    "    ├── Time\n",
     "    └── Value\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20f1304a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from urllib.parse import quote\n",
-    "raw = \"\"\"digraph G {\n",
-    "  1 [label=\"KOSPI\", fontcolor=black, shape=box];\n",
-    "  2 [label=\"Company\", fontcolor=black, shape=box];\n",
-    "  3 [label=\"FS\", fontcolor=black, shape=box];\n",
-    "  4 [label=\"Name\", fontcolor=black, shape=box];\n",
-    "  5 [label=\"Code\", fontcolor=black, shape=box];\n",
-    "  6 [label=\"Year\", fontcolor=black, shape=box];    \n",
-    "  7 [label=\"Rpid\", fontcolor=black, shape=box];\n",
-    "  8 [label=\"BS\", fontcolor=black, shape=box];\n",
-    "  9 [label=\"IS\", fontcolor=black, shape=box];\n",
-    "  10 [label=\"CIS\", fontcolor=black, shape=box];\n",
-    "  11 [label=\"CF\", fontcolor=black, shape=box];\n",
-    "  12 [label=\"SCE\", fontcolor=black, shape=box];\n",
-    "  1 -> 2 -> 5;\n",
-    "  1 -> 3;\n",
-    "  1 -> 4;\n",
-    "  2 -> 6;\n",
-    "  2 -> 7;\n",
-    "  6 -> 8;\n",
-    "  6 -> 9;\n",
-    "  6 -> 10;\n",
-    "  6 -> 11;\n",
-    "  6 -> 12;\n",
-    "}\"\"\"\n",
-    "txt = quote(raw)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8483d864",
-   "metadata": {},
-   "source": [
-    "<p align=\"center\">\n",
-    "    <img alt=\"Alt Text\" src=\"https://g.gravizo.com/svg?digraph%20G%20%7B%0A%20%201%20%5Blabel%3D%22KOSPI%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%202%20%5Blabel%3D%22Company1%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%203%20%5Blabel%3D%22Company2%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%204%20%5Blabel%3D%22...%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%205%20%5Blabel%3D%22Receipt%20No.1%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%206%20%5Blabel%3D%22Receipt%20No.2%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%20%20%20%20%0A%20%207%20%5Blabel%3D%22...%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%208%20%5Blabel%3D%22BS%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%209%20%5Blabel%3D%22IS%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%2010%20%5Blabel%3D%22CIS%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%2011%20%5Blabel%3D%22CF%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%2012%20%5Blabel%3D%22SCE%22%2C%20fontcolor%3Dblack%2C%20shape%3Dbox%5D%3B%0A%20%201%20-%3E%202%20-%3E%205%3B%0A%20%201%20-%3E%203%3B%0A%20%201%20-%3E%204%3B%0A%20%202%20-%3E%206%3B%0A%20%202%20-%3E%207%3B%0A%20%206%20-%3E%208%3B%0A%20%206%20-%3E%209%3B%0A%20%206%20-%3E%2010%3B%0A%20%206%20-%3E%2011%3B%0A%20%206%20-%3E%2012%3B%0A%7D\" />\n",
-    "</p>\n",
-    "<details>\n",
-    "<summary>How to create graph in markdown?</summary>\n",
-    "\n",
-    "```python\n",
-    "from urllib.parse import quote\n",
-    "raw = \"\"\"digraph G {\n",
-    "  1 [label=\"KOSPI\", fontcolor=black, shape=box];\n",
-    "  2 [label=\"Company1\", fontcolor=black, shape=box];\n",
-    "  3 [label=\"FS\", fontcolor=black, shape=box];\n",
-    "  4 [label=\"...\", fontcolor=black, shape=box];\n",
-    "  5 [label=\"Receipt No.1\", fontcolor=black, shape=box];\n",
-    "  6 [label=\"Receipt No.2\", fontcolor=black, shape=box];    \n",
-    "  7 [label=\"...\", fontcolor=black, shape=box];\n",
-    "  8 [label=\"BS\", fontcolor=black, shape=box];\n",
-    "  9 [label=\"IS\", fontcolor=black, shape=box];\n",
-    "  10 [label=\"CIS\", fontcolor=black, shape=box];\n",
-    "  11 [label=\"CF\", fontcolor=black, shape=box];\n",
-    "  12 [label=\"SCE\", fontcolor=black, shape=box];\n",
-    "  1 -> 2 -> 5;\n",
-    "  1 -> 3;\n",
-    "  1 -> 4;\n",
-    "  2 -> 6;\n",
-    "  2 -> 7;\n",
-    "  6 -> 8;\n",
-    "  6 -> 9;\n",
-    "  6 -> 10;\n",
-    "  6 -> 11;\n",
-    "  6 -> 12;\n",
-    "}\"\"\"\n",
-    "txt = quote(raw)\n",
-    "```\n",
-    "    \n",
-    "copy the text behind https://g.gravizo.com/svg?\n",
-    "</details>"
    ]
   },
   {
@@ -116,37 +47,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c34dfc54",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from private.apikey import APIKEY\n",
+    "\n",
+    "import os\n",
+    "import yaml\n",
     "\n",
     "import pandas as pd\n",
     "import OpenDartReader\n",
     "import FinanceDataReader as fdr\n",
     "\n",
-    "dart = OpenDartReader(APIKEY)"
+    "import psycopg2\n",
+    "from psycopg2 import sql\n",
+    "from psycopg2.extensions import ISOLATION_LEVEL_AUTOCOMMIT\n",
+    "\n",
+    "from pathlib import Path\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "20710bb0",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stocks = fdr.StockListing(\"KOSPI\")\n",
-    "stocks = stocks.loc[~stocks[\"Sector\"].isnull(), :]\n",
-    "stocks_syms = stocks[\"Symbol\"].values\n",
-    "stocks = stocks.reset_index(drop=True)"
+    "# Load settings\n",
+    "src_path = Path('.').absolute().parent\n",
+    "with (src_path / 'setting_files' / 'settings.yml').open('r') as file:\n",
+    "    settings = yaml.full_load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ebe72d78",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'opendart': {'apikey': 'd44ab611fae94904b2f5489d23c575f9b5a2aa0e'},\n",
+       " 'db': {'dbname': 'fsqa',\n",
+       "  'host': 'localhost',\n",
+       "  'user': 'postgres',\n",
+       "  'password': 'qazwsx90',\n",
+       "  'port': 5432}}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "20710bb0",
    "metadata": {},
    "outputs": [
     {
@@ -167,45 +128,169 @@
     }
    ],
    "source": [
+    "dart_settings = settings['opendart']\n",
+    "dart = OpenDartReader(dart_settings['apikey'])\n",
+    "\n",
+    "stocks = fdr.StockListing('KOSPI')\n",
+    "stocks = stocks.loc[~stocks['Sector'].isnull(), :]\n",
+    "stocks_syms = stocks['Symbol'].values\n",
+    "stocks = stocks.reset_index(drop=True)\n",
     "for c in stocks.columns:\n",
     "    print(c, stocks[c].dtype)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "44ddac81",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stocks[\"ListingDate\"] = stocks[\"ListingDate\"].astype(str)"
+    "db_settings = settings['db']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existence of Database fsqa: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "conn = psycopg2.connect(user=db_settings['user'], password=db_settings['password'])\n",
+    "conn.set_isolation_level(ISOLATION_LEVEL_AUTOCOMMIT)\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(sql.SQL(f\"SELECT EXISTS( SELECT 1 FROM pg_database WHERE datname='{db_settings['dbname']}');\"))\n",
+    "exists = cur.fetchone()[0]\n",
+    "if not exists:\n",
+    "    cur.execute(\n",
+    "        sql.SQL(\"CREATE DATABASE {};\").format(sql.Identifier(db_settings['dbname']))\n",
+    "    )\n",
+    "else:\n",
+    "    print(f\"Existence of Database {db_settings['dbname']}: {exists}\")\n",
+    "cur.close()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if the database exists: create tables\n",
+    "commands = (\n",
+    "    \"\"\"\n",
+    "    CREATE TABLE company (\n",
+    "        c_id SERIAL PRIMARY KEY,\n",
+    "        code VARCHAR(10) UNIQUE NOT NULL,\n",
+    "        name VARCHAR(255) NOT NULL\n",
+    "    )\n",
+    "    \"\"\",\n",
+    "    \"\"\" \n",
+    "    CREATE TABLE finalcial_statement (\n",
+    "        fs_id SERIAL PRIMARY KEY,\n",
+    "        code VARCHAR(10) UNIQUE NOT NULL,\n",
+    "        rpid VARCHAR(30) UNIQUE NOT NULL,\n",
+    "        time DATE NOT NULL,\n",
+    "        FOREIGN KEY (code) REFERENCES company (code) ON DELETE CASCADE\n",
+    "    )\n",
+    "    \"\"\",\n",
+    "    \"\"\"\n",
+    "    CREATE TABLE balance_sheet (\n",
+    "        bs_id SERIAL PRIMARY KEY,\n",
+    "        code VARCHAR(10) UNIQUE NOT NULL,\n",
+    "        rpid VARCHAR(30) UNIQUE NOT NULL,\n",
+    "        account VARCHAR(255) NOT NULL,\n",
+    "        value BIGINT NOT NULL,\n",
+    "        FOREIGN KEY (code) REFERENCES company (code) ON DELETE CASCADE,\n",
+    "        FOREIGN KEY (rpid) REFERENCES finalcial_statement (rpid) ON DELETE CASCADE\n",
+    "    )\n",
+    "    \"\"\",\n",
+    "    \"\"\"\n",
+    "    CREATE TABLE income_statement (\n",
+    "        is_id SERIAL PRIMARY KEY,\n",
+    "        code VARCHAR(10) UNIQUE NOT NULL,\n",
+    "        rpid VARCHAR(30) UNIQUE NOT NULL,\n",
+    "        account VARCHAR(255) NOT NULL,\n",
+    "        value BIGINT NOT NULL,\n",
+    "        FOREIGN KEY (code) REFERENCES company (code) ON DELETE CASCADE,\n",
+    "        FOREIGN KEY (rpid) REFERENCES finalcial_statement (rpid) ON DELETE CASCADE\n",
+    "    )\n",
+    "    \"\"\",\n",
+    "    \"\"\"\n",
+    "    CREATE TABLE cashflow_statement (\n",
+    "        cf_id SERIAL PRIMARY KEY,\n",
+    "        code VARCHAR(10) UNIQUE NOT NULL,\n",
+    "        rpid VARCHAR(30) UNIQUE NOT NULL,\n",
+    "        account VARCHAR(255) NOT NULL,\n",
+    "        value BIGINT NOT NULL,\n",
+    "        FOREIGN KEY (code) REFERENCES company (code)ON DELETE CASCADE,\n",
+    "        FOREIGN KEY (rpid) REFERENCES finalcial_statement (rpid) ON DELETE CASCADE\n",
+    "    )\n",
+    "    \"\"\",\n",
+    ")\n",
+    "\n",
+    "conn = None\n",
+    "try:\n",
+    "    conn = psycopg2.connect(\n",
+    "        database=db_settings['dbname'],\n",
+    "        host=db_settings['host'],\n",
+    "        user=db_settings['user'], \n",
+    "        password=db_settings['password'],\n",
+    "        port=db_settings['port']\n",
+    "    )\n",
+    "    cur = conn.cursor()\n",
+    "    for command in commands:\n",
+    "        cur.execute(sql.SQL(command))\n",
+    "    cur.close()\n",
+    "    conn.commit()\n",
+    "except (Exception, psycopg2.DatabaseError) as error:\n",
+    "    print(error)\n",
+    "finally:\n",
+    "    if conn is not None:\n",
+    "        conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = conn.cursor()\n",
+    "cursor.execute(sql.SQL(\"CREATE TABLE \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "88351a52",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
-    "from pathlib import Path\n",
     "\n",
     "db_path = Path(\"./private/\")\n",
-    "conn = sqlite3.connect(db_path / \"kospi_new.db\")\n",
+    "conn = sqlite3.connect(db_path / \"kospi.db\")\n",
+    "c = conn.cursor()\n",
     "# Samsung Electronic: 005930\n",
-    "# conn = sqlite3.connect(db_path / \"samsung_new.db\")\n",
-    "c = conn.cursor()"
+    "# conn = sqlite3.connect(db_path / \"samsung_new.db\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0873511c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stocks.to_sql(\"kospi\", conn, index=True)"
+    "stocks.to_sql(\"kospi\", conn, index=False)"
    ]
   },
   {
@@ -231,16 +316,6 @@
     "- induty_code: 업종코드\n",
     "- estdt: 설립일\n",
     "- acc_mt: 결산월"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "d3bf498b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -2292,9 +2367,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a4ed9b19307c800d89a3002578f776a0fb528ed3e6b1903878767ebecc1b6c32"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.12 64-bit ('fsqa': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -2307,7 +2384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   },
   "metadata": {
    "interpreter": {
