--- a/Notebooks/01_SQLDatabase.ipynb
+++ b/Notebooks/01_SQLDatabase.ipynb
@@ -47,29 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "import os\n",
     "import yaml\n",
     "\n",
     "import pandas as pd\n",
     "import OpenDartReader\n",
     "import FinanceDataReader as fdr\n",
     "\n",
-    "import psycopg2\n",
-    "from psycopg2 import sql\n",
-    "from psycopg2.extensions import ISOLATION_LEVEL_AUTOCOMMIT\n",
-    "\n",
+    "import psycopg\n",
+    "from psycopg import sql\n",
     "from pathlib import Path\n",
     "from tqdm.notebook import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,32 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'opendart': {'apikey': 'd44ab611fae94904b2f5489d23c575f9b5a2aa0e'},\n",
-       " 'db': {'dbname': 'fsqa',\n",
-       "  'host': 'localhost',\n",
-       "  'user': 'postgres',\n",
-       "  'password': 'qazwsx90',\n",
-       "  'port': 5432}}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "20710bb0",
    "metadata": {},
    "outputs": [
@@ -141,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,38 +121,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with psycopg.connect(user=db_settings['user'], password=db_settings['password'], autocommit=True) as conn:\n",
+    "    with conn.cursor() as cur:\n",
+    "        cur.execute(f\"SELECT EXISTS( SELECT 1 FROM pg_database WHERE datname='{db_settings['dbname']}');\")\n",
+    "        exists = cur.fetchone()[0]\n",
+    "    if not exists:\n",
+    "        with conn.cursor() as cur:\n",
+    "            cur.execute(sql.SQL(\"CREATE DATABASE {};\").format(sql.Identifier(db_settings['dbname'])))\n",
+    "    else:\n",
+    "        print(f\"Existence of Database {db_settings['dbname']}: {exists}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Existence of Database fsqa: True\n"
+      "Table created: company\n",
+      "Table created: finalcial_statement\n",
+      "Table created: balance_sheet\n",
+      "Table created: income_statement\n",
+      "Table created: cashflow_statement\n"
      ]
     }
    ],
-   "source": [
-    "conn = psycopg2.connect(user=db_settings['user'], password=db_settings['password'])\n",
-    "conn.set_isolation_level(ISOLATION_LEVEL_AUTOCOMMIT)\n",
-    "cur = conn.cursor()\n",
-    "cur.execute(sql.SQL(f\"SELECT EXISTS( SELECT 1 FROM pg_database WHERE datname='{db_settings['dbname']}');\"))\n",
-    "exists = cur.fetchone()[0]\n",
-    "if not exists:\n",
-    "    cur.execute(\n",
-    "        sql.SQL(\"CREATE DATABASE {};\").format(sql.Identifier(db_settings['dbname']))\n",
-    "    )\n",
-    "else:\n",
-    "    print(f\"Existence of Database {db_settings['dbname']}: {exists}\")\n",
-    "cur.close()\n",
-    "conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# if the database exists: create tables\n",
     "commands = (\n",
@@ -189,7 +160,8 @@
     "    CREATE TABLE company (\n",
     "        c_id SERIAL PRIMARY KEY,\n",
     "        code VARCHAR(10) UNIQUE NOT NULL,\n",
-    "        name VARCHAR(255) NOT NULL\n",
+    "        name VARCHAR(255) NOT NULL,\n",
+    "        sector VARCHAR(255) NOT NULL\n",
     "    )\n",
     "    \"\"\",\n",
     "    \"\"\" \n",
@@ -237,60 +209,124 @@
     ")\n",
     "\n",
     "conn = None\n",
-    "try:\n",
-    "    conn = psycopg2.connect(\n",
-    "        database=db_settings['dbname'],\n",
+    "table_names = ['company', 'finalcial_statement', 'balance_sheet', 'income_statement', 'cashflow_statement']\n",
+    "with psycopg.connect(\n",
+    "        dbname=db_settings['dbname'],\n",
     "        host=db_settings['host'],\n",
     "        user=db_settings['user'], \n",
     "        password=db_settings['password'],\n",
     "        port=db_settings['port']\n",
-    "    )\n",
-    "    cur = conn.cursor()\n",
-    "    for command in commands:\n",
-    "        cur.execute(sql.SQL(command))\n",
-    "    cur.close()\n",
-    "    conn.commit()\n",
-    "except (Exception, psycopg2.DatabaseError) as error:\n",
-    "    print(error)\n",
-    "finally:\n",
-    "    if conn is not None:\n",
-    "        conn.close()"
+    "    ) as conn:\n",
+    "    with conn.cursor() as cur:\n",
+    "        for i, command in enumerate(commands):\n",
+    "            cur.execute(\n",
+    "                f\"SELECT EXISTS( SELECT 1 FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_NAME = '{table_names[i]}');\"\n",
+    "            )\n",
+    "            exists = cur.fetchone()[0]\n",
+    "            if not exists:     \n",
+    "                cur.execute(sql.SQL(command))\n",
+    "                print(f'Table created: {table_names[i]}')\n",
+    "            else:\n",
+    "                print(f'Table already exists: {table_names[i]}')\n",
+    "    conn.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'company': ('c_id', 'code', 'name', 'sector'),\n",
+       " 'finalcial_statement': ('fs_id', 'code', 'rpid', 'time'),\n",
+       " 'balance_sheet': ('bs_id', 'code', 'rpid', 'account', 'value'),\n",
+       " 'income_statement': ('is_id', 'code', 'rpid', 'account', 'value'),\n",
+       " 'cashflow_statement': ('cf_id', 'code', 'rpid', 'account', 'value')}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cursor = conn.cursor()\n",
-    "cursor.execute(sql.SQL(\"CREATE TABLE \"))"
+    "table_columns = [\n",
+    "    ('c_id', 'code', 'name', 'sector'),\n",
+    "    ('fs_id', 'code', 'rpid', 'time'),\n",
+    "    ('bs_id', 'code', 'rpid', 'account', 'value'),\n",
+    "    ('is_id', 'code', 'rpid', 'account', 'value'),\n",
+    "    ('cf_id', 'code', 'rpid', 'account', 'value')\n",
+    "]\n",
+    "tables = dict(zip(table_names, table_columns))\n",
+    "tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "88351a52",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlite3\n",
-    "\n",
-    "db_path = Path(\"./private/\")\n",
-    "conn = sqlite3.connect(db_path / \"kospi.db\")\n",
-    "c = conn.cursor()\n",
-    "# Samsung Electronic: 005930\n",
-    "# conn = sqlite3.connect(db_path / \"samsung_new.db\")"
+    "with psycopg.connect(\n",
+    "        dbname=db_settings['dbname'],\n",
+    "        host=db_settings['host'],\n",
+    "        user=db_settings['user'], \n",
+    "        password=db_settings['password'],\n",
+    "        port=db_settings['port']\n",
+    "    ) as conn:\n",
+    "    with conn.cursor() as cur:\n",
+    "        sql.SQL(\"INSERT INTO {}({}) VALUES ('{data}') ;\").format(schema=schema,table=table,colum=colum,data=data)\n",
+    "        for i, line in stocks.loc[:, ['Symbol', 'Name', 'Sector']].iterrows():\n",
+    "            break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0873511c",
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Composed elements must be Composable, got ('a', 'b') instead",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21352/2058454101.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m sql.SQL(\"INSERT INTO {}({}) VALUES ('{}') ;\").format(\n\u001b[0m\u001b[0;32m      2\u001b[0m     sql.Identifier('company'), ('a', 'b'), (1, 2))\n",
+      "\u001b[1;32m~\\miniconda3\\envs\\fsqa\\lib\\site-packages\\psycopg2\\sql.py\u001b[0m in \u001b[0;36mformat\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    254\u001b[0m                 \u001b[0mrv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    255\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 256\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mComposed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    257\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    258\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\envs\\fsqa\\lib\\site-packages\\psycopg2\\sql.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, seq)\u001b[0m\n\u001b[0;32m    106\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mseq\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mComposable\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 108\u001b[1;33m                 raise TypeError(\n\u001b[0m\u001b[0;32m    109\u001b[0m                     f\"Composed elements must be Composable, got {i!r} instead\")\n\u001b[0;32m    110\u001b[0m             \u001b[0mwrapped\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Composed elements must be Composable, got ('a', 'b') instead"
+     ]
+    }
+   ],
    "source": [
-    "stocks.to_sql(\"kospi\", conn, index=False)"
+    "sql.SQL(\"INSERT INTO {}({}) VALUES ('{}') ;\").format(\n",
+    "    sql.Identifier('company'), sql.SQL('a', 'b'), (1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Symbol             095570\n",
+       "Name               AJ네트웍스\n",
+       "Sector    산업용 기계 및 장비 임대업\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "line"
    ]
   },
   {
