--- a/Notebooks/01_SQLDatabase.ipynb
+++ b/Notebooks/01_SQLDatabase.ipynb
@@ -47,7 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "ddb7d9f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "id": "4a9a62d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "20710bb0",
    "metadata": {},
    "outputs": [
@@ -112,9 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "id": "375d8196",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'db'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_489/728266814.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdb_settings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msettings\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'db'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'db'"
+     ]
+    }
+   ],
    "source": [
     "db_settings = settings['db']"
    ]
@@ -122,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "53490d84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,6 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "907cc741",
    "metadata": {},
    "outputs": [
     {
@@ -234,6 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "c83a6eab",
    "metadata": {},
    "outputs": [
     {
@@ -266,6 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "e5d7ed01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,6 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "bba87b94",
    "metadata": {},
    "outputs": [
     {
@@ -309,6 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "ff1c39b1",
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2428,8 @@
    "hash": "a4ed9b19307c800d89a3002578f776a0fb528ed3e6b1903878767ebecc1b6c32"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('fsqa': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -2420,7 +2442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   },
   "metadata": {
    "interpreter": {
