--- a/Notebooks/01_SQLDatabase.ipynb
+++ b/Notebooks/01_SQLDatabase.ipynb
@@ -69,8 +69,8 @@
     "from collections import defaultdict\n",
     "\n",
     "import pandas as pd\n",
-    "# import OpenDartReader\n",
-    "import dart_fss as dart\n",
+    "import OpenDartReader\n",
+    "# import dart_fss as dart\n",
     "import FinanceDataReader as fdr\n",
     "\n",
     "import psycopg\n",
@@ -611,52 +611,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "9911b493",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'company': ('c_id', 'code', 'name', 'sector'),\n",
-       " 'finalcial_statement': ('fs_id', 'code', 'rpid', 'time'),\n",
-       " 'balance_sheet': ('bs_id', 'code', 'rpid', 'account', 'value'),\n",
-       " 'income_statement': ('is_id', 'code', 'rpid', 'account', 'value'),\n",
-       " 'cashflow_statement': ('cf_id', 'code', 'rpid', 'account', 'value')}"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "2382ad1b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('fs_id', 'code', 'rpid', 'time')"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tables['finalcial_statement']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "id": "f5f82107",
    "metadata": {},
@@ -691,27 +645,6 @@
     "                ),\n",
     "                (i+1,) + tuple(line.values)\n",
     "            )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "141d3582",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i"
    ]
   },
   {
