--- a/Notebooks/02_xbrl.ipynb
+++ b/Notebooks/02_xbrl.ipynb
@@ -22,6 +22,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "필요한 계정 항목\n",
+    "\n",
+    "|sj_div|sj_nm|account_nm\n",
+    "|---|---|---\n",
+    "|BS|재무상태표|유동자산\n",
+    "|BS|재무상태표|현금및현금성자산\n",
+    "|BS|재무상태표|매출채권\n",
+    "|BS|재무상태표|선급비용\n",
+    "|BS|재무상태표|재고자산\n",
+    "|BS|재무상태표|비유동자산\n",
+    "|BS|재무상태표|유형자산\n",
+    "|BS|재무상태표|무형자산\n",
+    "|BS|재무상태표|자산총계\n",
+    "|BS|재무상태표|유동부채\n",
+    "|BS|재무상태표|매입채무\n",
+    "|BS|재무상태표|단기차입금\n",
+    "|BS|재무상태표|선수금\n",
+    "|BS|재무상태표|비유동부채\n",
+    "|BS|재무상태표|사채\n",
+    "|BS|재무상태표|장기차입금\n",
+    "|BS|재무상태표|부채총계\n",
+    "|BS|재무상태표|자본총계\n",
+    "|BS|재무상태표|부채와자본총계\n",
+    "|IS|손익계산서|수익(매출액)\n",
+    "|IS|손익계산서|매출원가\n",
+    "|IS|손익계산서|매출총이익\n",
+    "|IS|손익계산서|판매비와관리비\n",
+    "|IS|손익계산서|영업이익\n",
+    "|IS|손익계산서|금융수익\n",
+    "|IS|손익계산서|금융비용\n",
+    "|IS|손익계산서|법인세비용차감전순이익(손실)\n",
+    "|IS|손익계산서|법인세비용\n",
+    "|IS|손익계산서|계속영업이익(손실)\n",
+    "|IS|손익계산서|당기순이익(손실)\n",
+    "|CF|현금흐름표|영업활동 현금흐름\n",
+    "|CF|현금흐름표|영업에서 창출된 현금흐름\n",
+    "|CF|현금흐름표|투자활동 현금흐름\n",
+    "|CF|현금흐름표|재무활동 현금흐름\n",
+    "|CF|현금흐름표|외화환산으로 인한 현금의 변동\n",
+    "|CF|현금흐름표|현금및현금성자산의 순증감\n",
+    "|CF|현금흐름표|기초의 현금및현금성자산\n",
+    "|CF|현금흐름표|기말의 현금및현금성자산"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
