update xbrl taxonomy

--- a/Notebooks/02_xbrl.ipynb
+++ b/Notebooks/02_xbrl.ipynb
@@ -141,18 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from rdflib import Graph, Literal, RDF, URIRef, Namespace #basic RDF handling\n",
     "from rdflib.namespace import FOAF , XSD #most common namespaces\n",
-    "import urllib.parse #for parsing strings to URI's"
+    "import urllib.parse #for parsing strings to URI's\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +255,7 @@
        "3           Purple  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,19 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "g = Graph()\n",
-    "ppl = Namespace('http://abc.com/people/')\n",
+    "ppl = Namespace('http://example.com/people/')\n",
     "loc = Namespace('http://mylocations.org/addresses/')\n",
     "schema = Namespace('http://schema.org/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -293,66 +294,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Namespace(\"http://xmlns.com/foaf/0.1/\")"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "RS = Namespace('http://joyhong.tistory.com/resource/')\n",
-    "ONT = Namespace('http://joyhong.tistory.com/ontology/')\n",
-    "SCHEMA = Namespace(\"http://schema.org/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@prefix ns1: <http://schema.org/> .\n",
-      "@prefix ns2: <http://xmlns.com/foaf/0.1/> .\n",
+      "@prefix ns1: <http://xmlns.com/foaf/0.1/> .\n",
+      "@prefix ns2: <http://schema.org/> .\n",
       "@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .\n",
       "\n",
-      "<http://abc.com/people/Jake> a ns2:Person ;\n",
-      "    ns1:address \"12E Street 98\"^^xsd:string ;\n",
-      "    ns1:name \"Jake\"^^xsd:string ;\n",
-      "    ns2:age 42 .\n",
+      "<http://example.com/people/Jake> a ns1:Person ;\n",
+      "    ns2:address \"12E Street 98\"^^xsd:string ;\n",
+      "    ns2:name \"Jake\"^^xsd:string ;\n",
+      "    ns1:age 42 .\n",
       "\n",
-      "<http://abc.com/people/Jenny> a ns2:Person ;\n",
-      "    ns1:address \"Leidseplein 2\"^^xsd:string ;\n",
-      "    ns1:name \"Jenny\"^^xsd:string ;\n",
-      "    ns2:age 12 .\n",
+      "<http://example.com/people/Jenny> a ns1:Person ;\n",
+      "    ns2:address \"Leidseplein 2\"^^xsd:string ;\n",
+      "    ns2:name \"Jenny\"^^xsd:string ;\n",
+      "    ns1:age 12 .\n",
       "\n",
-      "<http://abc.com/people/Jill> a ns2:Person ;\n",
-      "    ns1:address \"52W Street 5\"^^xsd:string ;\n",
-      "    ns1:name \"Jill\"^^xsd:string ;\n",
-      "    ns2:age 28 .\n",
+      "<http://example.com/people/Jill> a ns1:Person ;\n",
+      "    ns2:address \"52W Street 5\"^^xsd:string ;\n",
+      "    ns2:name \"Jill\"^^xsd:string ;\n",
+      "    ns1:age 28 .\n",
       "\n",
-      "<http://abc.com/people/John> a ns2:Person ;\n",
-      "    ns1:address \"Dam 52\"^^xsd:string ;\n",
-      "    ns1:name \"John\"^^xsd:string ;\n",
-      "    ns2:age 32 .\n",
+      "<http://example.com/people/John> a ns1:Person ;\n",
+      "    ns2:address \"Dam 52\"^^xsd:string ;\n",
+      "    ns2:name \"John\"^^xsd:string ;\n",
+      "    ns1:age 32 .\n",
       "\n",
-      "<http://mylocations.org/addresses/12E%20Street%2098> ns1:name \"12E Street 98\"^^xsd:string .\n",
+      "<http://mylocations.org/addresses/12E%20Street%2098> ns2:name \"12E Street 98\"^^xsd:string .\n",
       "\n",
-      "<http://mylocations.org/addresses/52W%20Street%205> ns1:name \"52W Street 5\"^^xsd:string .\n",
+      "<http://mylocations.org/addresses/52W%20Street%205> ns2:name \"52W Street 5\"^^xsd:string .\n",
       "\n",
-      "<http://mylocations.org/addresses/Dam%2052> ns1:name \"Dam 52\"^^xsd:string .\n",
+      "<http://mylocations.org/addresses/Dam%2052> ns2:name \"Dam 52\"^^xsd:string .\n",
       "\n",
-      "<http://mylocations.org/addresses/Leidseplein%202> ns1:name \"Leidseplein 2\"^^xsd:string .\n",
+      "<http://mylocations.org/addresses/Leidseplein%202> ns2:name \"Leidseplein 2\"^^xsd:string .\n",
       "\n",
       "\n"
      ]
@@ -360,18 +339,25 @@
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N9649e512785d4115b3b578f0aa877a67 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N42150f30038f4cdaa20c991a4360946a (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print(g.serialize(format='turtle'))\n",
-    "g.serialize('mycsv2rdf.ttl',format='turtle')"
+    "g.serialize('example.ttl',format='turtle')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -393,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
