update rdfs things

--- a/Notebooks/02_rdf.ipynb
+++ b/Notebooks/02_rdf.ipynb
@@ -1,136 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "import yaml\n",
-    "from tqdm.notebook import tqdm\n",
-    "from collections import defaultdict\n",
-    "\n",
-    "import pandas as pd\n",
-    "import OpenDartReader\n",
-    "import FinanceDataReader as fdr\n",
-    "\n",
-    "import psycopg\n",
-    "from psycopg import sql\n",
-    "from pathlib import Path\n",
-    "from tqdm.notebook import tqdm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "필요한 계정 항목\n",
-    "\n",
-    "|sj_div|sj_nm|account_nm\n",
-    "|---|---|---\n",
-    "|BS|재무상태표|유동자산\n",
-    "|BS|재무상태표|현금및현금성자산\n",
-    "|BS|재무상태표|매출채권\n",
-    "|BS|재무상태표|선급비용\n",
-    "|BS|재무상태표|재고자산\n",
-    "|BS|재무상태표|비유동자산\n",
-    "|BS|재무상태표|유형자산\n",
-    "|BS|재무상태표|무형자산\n",
-    "|BS|재무상태표|자산총계\n",
-    "|BS|재무상태표|유동부채\n",
-    "|BS|재무상태표|매입채무\n",
-    "|BS|재무상태표|단기차입금\n",
-    "|BS|재무상태표|선수금\n",
-    "|BS|재무상태표|비유동부채\n",
-    "|BS|재무상태표|사채\n",
-    "|BS|재무상태표|장기차입금\n",
-    "|BS|재무상태표|부채총계\n",
-    "|BS|재무상태표|자본총계\n",
-    "|BS|재무상태표|부채와자본총계\n",
-    "|IS|손익계산서|수익(매출액)\n",
-    "|IS|손익계산서|매출원가\n",
-    "|IS|손익계산서|매출총이익\n",
-    "|IS|손익계산서|판매비와관리비\n",
-    "|IS|손익계산서|영업이익\n",
-    "|IS|손익계산서|금융수익\n",
-    "|IS|손익계산서|금융비용\n",
-    "|IS|손익계산서|법인세비용차감전순이익(손실)\n",
-    "|IS|손익계산서|법인세비용\n",
-    "|IS|손익계산서|계속영업이익(손실)\n",
-    "|IS|손익계산서|당기순이익(손실)\n",
-    "|CF|현금흐름표|영업활동 현금흐름\n",
-    "|CF|현금흐름표|영업에서 창출된 현금흐름\n",
-    "|CF|현금흐름표|투자활동 현금흐름\n",
-    "|CF|현금흐름표|재무활동 현금흐름\n",
-    "|CF|현금흐름표|외화환산으로 인한 현금의 변동\n",
-    "|CF|현금흐름표|현금및현금성자산의 순증감\n",
-    "|CF|현금흐름표|기초의 현금및현금성자산\n",
-    "|CF|현금흐름표|기말의 현금및현금성자산"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load settings\n",
-    "src_path = Path('.').absolute().parent\n",
-    "with (src_path / 'setting_files' / 'settings.yml').open('r') as file:\n",
-    "    settings = yaml.full_load(file)\n",
-    "\n",
-    "dart_settings = settings['opendart']\n",
-    "dart = OpenDartReader(dart_settings['apikey'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "|재무제표구분|재무제표명칭|개별/연결|표시방법|세전세후\n",
-    "|---|---|---|---|---|\n",
-    "|BS1|재무상태표|연결|유동/비유동법|\n",
-    "|BS2|재무상태표|개별|유동/비유동법|\n",
-    "|BS3|재무상태표|연결|유동성배열법|\n",
-    "|BS4|재무상태표|개별|유동성배열법|\n",
-    "|IS1|별개의 손익계산서|연결|기능별분류|\n",
-    "|IS2|별개의 손익계산서|개별|기능별분류|\n",
-    "|IS3|별개의 손익계산서|연결|성격별분류|\n",
-    "|IS4|별개의 손익계산서|개별|성격별분류|\n",
-    "|CIS1|포괄손익계산서|연결|세후|\n",
-    "|CIS2|포괄손익계산서|개별|세후|\n",
-    "|CIS3|포괄손익계산서|연결|세전|\n",
-    "|CIS4|포괄손익계산서|개별|세전|\n",
-    "|DCIS1|단일 포괄손익계산서|연결|기능별분류|세후포괄손익\n",
-    "|DCIS2|단일 포괄손익계산서|개별|기능별분류|세후포괄손익\n",
-    "|DCIS3|단일 포괄손익계산서|연결|기능별분류|세전\n",
-    "|DCIS4|단일 포괄손익계산서|개별|기능별분류|세전\n",
-    "|DCIS5|단일 포괄손익계산서|연결|성격별분류|세후포괄손익\n",
-    "|DCIS6|단일 포괄손익계산서|개별|성격별분류|세후포괄손익\n",
-    "|DCIS7|단일 포괄손익계산서|연결|성격별분류|세전\n",
-    "|DCIS8|단일 포괄손익계산서|개별|성격별분류|세전\n",
-    "|CF1|현금흐름표|연결|직접법|\n",
-    "|CF2|현금흐름표|개별|직접법|\n",
-    "|CF3|현금흐름표|연결|간접법|\n",
-    "|CF4|현금흐름표|개별|간접법|\n",
-    "|SCE1|자본변동표|연결||\n",
-    "|SCE2|자본변동표|개별||"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xbrl_bs = dart.xbrl_taxonomy('BS1')\n",
-    "xbrl_is = dart.xbrl_taxonomy('IS1')\n",
-    "xbrl_cis = dart.xbrl_taxonomy('CIS1')\n",
-    "xbrl_cf = dart.xbrl_taxonomy('CF1')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -141,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from rdflib import Graph, Literal, RDF, URIRef, Namespace #basic RDF handling\n",
-    "from rdflib.namespace import FOAF , XSD #most common namespaces\n",
+    "from rdflib.namespace import FOAF, XSD #most common namespaces\n",
     "import urllib.parse #for parsing strings to URI's\n",
     "import pandas as pd"
    ]
@@ -350,6 +220,257 @@
    "source": [
     "print(g.serialize(format='turtle'))\n",
     "g.serialize('example.ttl',format='turtle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rdflib import Graph, Literal, RDF, URIRef, Namespace #basic RDF handling\n",
+    "from rdflib.namespace import CSVW, DC, DCAT, DCTERMS, DOAP, FOAF, ODRL2, ORG, OWL, \\\n",
+    "                           PROF, PROV, RDF, RDFS, SDO, SH, SKOS, SOSA, SSN, TIME, \\\n",
+    "                           VOID, XMLNS, XSD\n",
+    "import urllib.parse #for parsing strings to URI's\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "main_path = Path().absolute().parent\n",
+    "data_path = main_path / 'data'\n",
+    "df = pd.read_csv(data_path / 'AccountRDF.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# full\n",
+    "ns_acc = Namespace('http://fsqa.com/acc#')\n",
+    "namespace_dict = {\n",
+    "    'acc': ns_acc, 'time': TIME, 'rdf': RDF, 'rdfs': RDFS, None: ''\n",
+    "}\n",
+    "g = Graph()\n",
+    "g.bind('rdf', RDF)\n",
+    "g.bind('time', TIME)\n",
+    "g.bind('acc', ns_acc, override=True)\n",
+    "for index, row in df.iterrows():\n",
+    "    s_ns, s = row['subject'].split(':')\n",
+    "    p_ns, p = row['predicate'].split(':')\n",
+    "    if len(row['object'].split(':')) < 2:\n",
+    "        o_ns, o = None, row['object']\n",
+    "    else:\n",
+    "        o_ns, o = row['object'].split(':')\n",
+    "    \n",
+    "    if o_ns is None:\n",
+    "        g.add( (URIRef(namespace_dict[s_ns]+s), URIRef(namespace_dict[p_ns]+p), Literal(o, datatype=XSD.string)) )\n",
+    "    else:\n",
+    "        g.add( (URIRef(namespace_dict[s_ns]+s), URIRef(namespace_dict[p_ns]+p), URIRef(namespace_dict[o_ns]+o)) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Graph identifier=N35b60fcf28484699b962e16d48526170 (<class 'rdflib.graph.Graph'>)>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.serialize(data_path / 'AccountRDF.ttl', format='turtle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Graph identifier=N35b60fcf28484699b962e16d48526170 (<class 'rdflib.graph.Graph'>)>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.serialize(data_path / 'AccountRDF.xml', format='xml', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Graph identifier=N35ae26a7094249e2a529501ed2202e01 (<class 'rdflib.graph.Graph'>)>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = Graph()\n",
+    "g.load(data_path / 'AccountRDF.ttl', format='ttl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(rdflib.term.URIRef('http://fsqa.com/acc#AdvancesCustomers'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#BondsIssued'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#CashAndCashEquivalents'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#IntangibleAssets'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#Inventories'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#LongTermBorrowings'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#PrepaidExpenses'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#PropertyPlantAndEquipment'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#ShorttermBorrowings'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#TotalEquity'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#TradeAndOtherCurrentPayables'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#TradeAndOtherCurrentReceivables'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#AssetsAbstract'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#LiabilitiesAbstract'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#LiabilitiesAndEquities'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#NoncurrentAssets'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#NoncurrentLiabilities'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#CurrentLiabilities'),)\n",
+      "(rdflib.term.URIRef('http://fsqa.com/acc#CurrentAssets'),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# show only BalanceSheet\n",
+    "query_string = \"\"\"\n",
+    "SELECT DISTINCT ?acc ?label\n",
+    "WHERE {\n",
+    "    ?acc acc:Account_Belonging fss:BalanceSheet .\n",
+    "    ?label rdfs:label ?any\n",
+    "}\n",
+    "\"\"\"\n",
+    "qres = g.query(query_string)\n",
+    "for x in qres:\n",
+    "    print(f'{x}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show only BalanceSheet\n",
+    "query_string = \"\"\"\n",
+    "CONSTRUCT {\n",
+    "    ?acc a acc:Account ;\n",
+    "         acc:partOf ?acc .\n",
+    "}\n",
+    "WHERE {\n",
+    "    ?acc acc:Account_Belonging fss:BalanceSheet .\n",
+    "}\n",
+    "\"\"\"\n",
+    "qres = g.query(query_string)\n",
+    "# for x in qres:\n",
+    "#     print(f'{x}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Graph identifier=Neb25ac0f08c746e3b699c94f0361a1a1 (<class 'rdflib.graph.Graph'>)>"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qres.graph.serialize(data_path / 'temp.ttl', format='ttl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from streamlit_agraph import TripleStore, agraph, Config\n",
+    "results = g.query(query_string)\n",
+    "store = TripleStore()\n",
+    "\n",
+    "for subj, pred, obj in results.graph:\n",
+    "    store.add_triple(subj, pred, obj, \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<streamlit_agraph.TripleStore at 0x15697ea7520>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(rdflib.term.URIRef('http://fsqa.com/acc#LongTermBorrowings'),\n",
+       " rdflib.term.URIRef('http://fsqa.com/acc#partOf'),\n",
+       " rdflib.term.URIRef('http://fsqa.com/acc#LongTermBorrowings'))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
