--- a/Notebooks/02_test.ipynb
+++ b/Notebooks/02_test.ipynb
@@ -660,6 +660,370 @@
    "source": [
     "net.show('bs.html')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2021-12-13'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.now().strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "from spacy import displacy\n",
+    "sp = spacy.load('en_core_web_sm')\n",
+    "sp_trf = spacy.load('en_core_web_trf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\simon\\miniconda3\\envs\\venv\\lib\\site-packages\\torch\\autocast_mode.py:141: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
+      "  warnings.warn('User provided device_type of \\'cuda\\', but CUDA is not available. Disabling')\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = 'What happens to operating income when cost of revenue increases by 10 percent this year?'\n",
+    "\n",
+    "doc = sp_trf(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">What happens to operating income when cost of revenue increases by \n",
+       "<mark class=\"entity\" style=\"background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    10 percent\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PERCENT</span>\n",
+       "</mark>\n",
+       " \n",
+       "<mark class=\"entity\" style=\"background: #bfe1d9; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    this year\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">DATE</span>\n",
+       "</mark>\n",
+       "?</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "displacy.render(doc, style='ent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- ('what', 'O', '') --\n",
+      "-- ('happen', 'O', '') --\n",
+      "-- ('to', 'O', '') --\n",
+      "-- ('operating', 'O', '') --\n",
+      "-- ('income', 'O', '') --\n",
+      "-- ('when', 'O', '') --\n",
+      "-- ('cost', 'O', '') --\n",
+      "-- ('of', 'O', '') --\n",
+      "-- ('revenue', 'O', '') --\n",
+      "-- ('increase', 'O', '') --\n",
+      "-- ('by', 'O', '') --\n",
+      "-- ('10', 'B', 'PERCENT') --\n",
+      "-- ('percent', 'I', 'PERCENT') --\n",
+      "-- ('this', 'B', 'DATE') --\n",
+      "PERCENT\n",
+      "-- ('year', 'I', 'DATE') --\n",
+      "-- ('?', 'O', '') --\n",
+      "DATE\n"
+     ]
+    }
+   ],
+   "source": [
+    "tag = None\n",
+    "words = None\n",
+    "tags = set()\n",
+    "for x in doc:\n",
+    "    print(f'-- {x.lemma_, x.ent_iob_, x.ent_type_} --')\n",
+    "    if x.ent_iob_ == 'B':\n",
+    "        if tag is not None:\n",
+    "            tags.add((tag, words))\n",
+    "        words = x.lemma_\n",
+    "        tag = x.ent_type_\n",
+    "    elif x.ent_iob_ == 'I':\n",
+    "        words += f' {x.lemma_}'\n",
+    "    else:\n",
+    "        if tag is not None:\n",
+    "            tags.add((tag, words))\n",
+    "        tag = None\n",
+    "        words = None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('DATE', 'this year'), ('PERCENT', '10 percent')}"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what O \n",
+      "happen O \n",
+      "to O \n",
+      "operating O \n",
+      "income O \n",
+      "when O \n",
+      "cost O \n",
+      "of O \n",
+      "revenue O \n",
+      "increase O \n",
+      "by O \n",
+      "10 B PERCENT\n",
+      "percent I PERCENT\n",
+      "this B DATE\n",
+      "year I DATE\n",
+      "? O \n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in doc:\n",
+    "    print(x.lemma_, x.ent_iob_, x.ent_type_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATE this year\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tag, words in tags:\n",
+    "    print(tag, words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime as dt\n",
+    "from dateutil.relativedelta import relativedelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = dt.now() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 12, 13, 17, 19, 25, 835071)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2020, 12, 13, 17, 19, 25, 835071)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today + relativedelta(years=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dateutil.relativedelta import relativedelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = dt.strptime(f'2021-01-23', '%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today >= dt.strptime(f'{today.year}-04-01', '%Y-%m-%d') \n",
+    "# 2021.12.08 >= 2021.04.01 \n",
+    "# true: year = 2020\n",
+    "# false: year = 2019  2021.01.08 >= 2021.04.01 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'last year'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4728/554793410.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'last year'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'last year'"
+     ]
+    }
+   ],
+   "source": [
+    "int('last year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today  dt.strptime(f'{today.year}-03-31', '%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2022, 3, 31, 0, 0)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.strptime(f'{today.year + 1}-03-31', '%Y-%m-%d')"
+   ]
   }
  ],
  "metadata": {
