update for codes

--- a/Notebooks/01_SQLDatabase.ipynb
+++ b/Notebooks/01_SQLDatabase.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "5473107f",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "2b1e13b9",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "20710bb0",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "63632b8b",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "3b2a5f22",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 21,
    "id": "98cd954f",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 22,
    "id": "b7baa6d6",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        " 'income_statement': ('is_id', 'code', 'rpid', 'quarter', 'account', 'value')}"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 23,
    "id": "ae52bcb0-9604-46c8-b28e-9a0988c47664",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "359  005930  삼성전자  통신 및 방송 장비 제조업"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 24,
    "id": "ce8bf15f",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 25,
    "id": "cf071b11-57a3-47d0-a6b3-590e0916cc0c",
    "metadata": {
     "tags": []
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 26,
    "id": "b257c35e",
    "metadata": {},
    "outputs": [
@@ -471,30 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
-   "id": "cc0d2cc5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "code            005930\n",
-      "rpid    20160330003536\n",
-      "time              2015\n",
-      "Name: 0, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, line in data['info'].iterrows():\n",
-    "    print(line)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 27,
    "id": "053ba093",
    "metadata": {},
    "outputs": [],
@@ -571,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 28,
    "id": "ef3ee38a",
    "metadata": {},
    "outputs": [
@@ -584,7 +561,7 @@
        " 'income_statement': ('is_id', 'code', 'rpid', 'quarter', 'account', 'value')}"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,17 +623,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "37ebc768",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1.564803,)]"
+       "[(-1.5648029930171061,)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +650,7 @@
     "    with conn.cursor() as cur:\n",
     "        cur.execute(\n",
     "            \"\"\"\n",
-    "            SELECT CAST(A.revenue AS REAL) / CAST(B.cor AS REAL)\n",
+    "            SELECT (1.0 * CAST(A.revenue AS REAL)) / (1.0 * CAST(B.cor AS REAL))\n",
     "            FROM (\n",
     "            (SELECT T.value AS revenue FROM vt_is_005930 AS T\n",
     "            WHERE \n",
@@ -1189,7 +1166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.9"
   },
   "metadata": {
    "interpreter": {
